  collected. (For example if ``x.__dict__ is x``).

- Issue #14172: Fix reference leak when marshalling a buffer-like object
  (other than a bytes object).

- Issue #13521: dict.setdefault() now does only one lookup for the given key,
  making it "atomic" for many purposes.  Patch by Filip Gruszczyński.

- Issue #14471: Fix a possible buffer overrun in the winreg module.

Library
-------

- Issue #16114: The subprocess module no longer provides a misleading
  error message stating that args[0] did not exist when either the cwd or
  executable keyword arguments specified a path that did not exist.

- Issue #15756: subprocess.poll() now properly handles errno.ECHILD to
  return a returncode of 0 when the child has already exited or cannot
  be waited on.

- Issue #12376: Pass on parameters in TextTestResult.__init__ super call

- Issue #15222: Insert blank line after each message in mbox mailboxes

- Issue #16013: Fix CSV Reader parsing issue with ending quote characters.
  Patch by Serhiy Storchaka.

- Issue #15421: fix an OverflowError in Calendar.itermonthdates() after
  datetime.MAXYEAR.  Patch by Cédric Krier.

- Issue #15970: xml.etree.ElementTree now serializes correctly the empty HTML
  elements 'meta' and 'param'.

- Issue #15842: the SocketIO.{readable,writable,seekable} methods now
  raise ValueError when the file-like object is closed.  Patch by Alessandro
  Moura.

- Issue #15881: Fixed atexit hook in multiprocessing.  Original patch
  by Chris McDonough.

- Issue #15340: Fix importing the random module when /dev/urandom cannot
  be opened.  This was a regression caused by the hash randomization patch.

- Issue #15841: The readable(), writable() and seekable() methods of BytesIO
  and StringIO objects now raise ValueError when the object has been closed.
  Patch by Alessandro Moura.

- Issue #15509: webbrowser.UnixBrowser no longer passes empty arguments to
  Popen when %action substitutions produce empty strings.
